--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 
 h2 {
   font-size: 26px;
-  font-weight: 400;
+  font-weight: bold;
   margin: 0 10px 10px 10px;
   text-align: center;
 }
 
 h3 {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 p {
@@ -31,7 +31,7 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
@@ -58,20 +58,31 @@ header {
   text-align: center;
 }
 
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
 .logo {
   font-family: "Pangolin", cursive;
   font-size: 72px;
   color: #fff;
 }
 
-header nav ul li {
+header nav ul {
+  display: flex;
   list-style-type: none;
 }
+
 
 header nav ul li a {
   color: #fff;
   text-decoration: none;
   padding: 0 20px 0 0;
+}
+
+header nav ul li:last-child a {
+  margin-right: 0px;
 }
 
 header nav ul li a:hover {
@@ -104,6 +115,13 @@ form button {
   width: 100%;
 }
 
+.form-space {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
 /* -------  Footer ------- */
 
 footer {
@@ -117,3 +135,53 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 480px) {
+  header {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding-top: 5px;
+  }
+
+  form {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  form input {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  form select,
+  form input {
+    margin-bottom: 0;
+    width:80%;
+  }
+  
+  .form-space {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: normal;
+    align-self:center;
+  }
+
+  .group {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .item {
+    flex: 1;
+    margin: 10px;
+  }
+
+  .item-double{
+    flex: 2;
+    align-self:center;
+    margin: 10px;
+  }
+
+}
