--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Lato", sans-serif;
+  min-width: fit-content;
 }
 
 h2 {
@@ -135,13 +136,14 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width: 480px) {
+@media screen and (min-width: 480px) {
   header {
     display: flex;
     justify-content:space-between;
     align-items: center;
     padding-top: 5px;
   }
+
 
   form {
     display: flex;
